src/lua54/ldblib.zig

// Lua 5.4 debug library — debug.getinfo, debug.sethook, etc.
// Cleaned from translate-c output of ldblib.c.

const std = @import("std");
const FILE = std.c.FILE;

const lua_State = opaque {};
const lua_Number = f64;
const lua_Integer = c_longlong;
const lua_KContext = isize;
const lua_KFunction = ?*const fn (?*lua_State, c_int, lua_KContext) callconv(.c) c_int;
const lua_CFunction = ?*const fn (?*lua_State) callconv(.c) c_int;

const struct_CallInfo_2 = opaque {};

const lua_Debug = extern struct {
    event: c_int = 0,
    name: ?[*:0]const u8 = null,
    namewhat: ?[*:0]const u8 = null,
    what: ?[*:0]const u8 = null,
    source: ?[*:0]const u8 = null,
    srclen: usize = 0,
    currentline: c_int = 0,
    linedefined: c_int = 0,
    lastlinedefined: c_int = 0,
    nups: u8 = 0,
    nparams: u8 = 0,
    isvararg: u8 = 0,
    istailcall: u8 = 0,
    ftransfer: c_ushort = 0,
    ntransfer: c_ushort = 0,
    short_src: [60]u8 = std.mem.zeroes([60]u8),
    i_ci: ?*struct_CallInfo_2 = null,
};

const lua_Hook = ?*const fn (?*lua_State, *lua_Debug) callconv(.c) void;

const luaL_Reg = extern struct {
    name: ?[*:0]const u8 = null,
    func: lua_CFunction = null,
};

// Lua API
extern fn lua_gettop(L: ?*lua_State) c_int;
extern fn lua_settop(L: ?*lua_State, idx: c_int) void;
extern fn lua_pushvalue(L: ?*lua_State, idx: c_int) void;
extern fn lua_rotate(L: ?*lua_State, idx: c_int, n: c_int) void;
extern fn lua_checkstack(L: ?*lua_State, n: c_int) c_int;
extern fn lua_xmove(from: ?*lua_State, to: ?*lua_State, n: c_int) void;
extern fn lua_type(L: ?*lua_State, idx: c_int) c_int;
extern fn lua_typename(L: ?*lua_State, tp: c_int) [*:0]const u8;
extern fn lua_toboolean(L: ?*lua_State, idx: c_int) c_int;
extern fn lua_tolstring(L: ?*lua_State, idx: c_int, len: ?*usize) ?[*:0]const u8;
extern fn lua_tothread(L: ?*lua_State, idx: c_int) ?*lua_State;
extern fn lua_iscfunction(L: ?*lua_State, idx: c_int) c_int;
extern fn lua_compare(L: ?*lua_State, idx1: c_int, idx2: c_int, op: c_int) c_int;
extern fn lua_pushnil(L: ?*lua_State) void;
extern fn lua_pushinteger(L: ?*lua_State, n: lua_Integer) void;
extern fn lua_pushstring(L: ?*lua_State, s: ?[*:0]const u8) ?[*:0]const u8;
extern fn lua_pushlstring(L: ?*lua_State, s: [*]const u8, len: usize) ?[*:0]const u8;
extern fn lua_pushfstring(L: ?*lua_State, fmt: [*:0]const u8, ...) ?[*:0]const u8;
extern fn lua_pushboolean(L: ?*lua_State, b: c_int) void;
extern fn lua_pushlightuserdata(L: ?*lua_State, p: ?*anyopaque) void;
extern fn lua_pushthread(L: ?*lua_State) c_int;
extern fn lua_createtable(L: ?*lua_State, narr: c_int, nrec: c_int) void;
extern fn lua_getmetatable(L: ?*lua_State, objindex: c_int) c_int;
extern fn lua_getfield(L: ?*lua_State, idx: c_int, k: [*:0]const u8) c_int;
extern fn lua_rawget(L: ?*lua_State, idx: c_int) c_int;
extern fn lua_rawset(L: ?*lua_State, idx: c_int) void;
extern fn lua_setfield(L: ?*lua_State, idx: c_int, k: [*:0]const u8) void;
extern fn lua_setmetatable(L: ?*lua_State, objindex: c_int) c_int;
extern fn lua_getiuservalue(L: ?*lua_State, idx: c_int, n: c_int) c_int;
extern fn lua_setiuservalue(L: ?*lua_State, idx: c_int, n: c_int) c_int;
extern fn lua_callk(L: ?*lua_State, nargs: c_int, nresults: c_int, ctx: lua_KContext, k: lua_KFunction) void;
extern fn lua_pcallk(L: ?*lua_State, nargs: c_int, nresults: c_int, errfunc: c_int, ctx: lua_KContext, k: lua_KFunction) c_int;
extern fn lua_getstack(L: ?*lua_State, level: c_int, ar: *lua_Debug) c_int;
extern fn lua_getinfo(L: ?*lua_State, what: [*:0]const u8, ar: *lua_Debug) c_int;
extern fn lua_getlocal(L: ?*lua_State, ar: ?*const lua_Debug, n: c_int) ?[*:0]const u8;
extern fn lua_setlocal(L: ?*lua_State, ar: ?*const lua_Debug, n: c_int) ?[*:0]const u8;
extern fn lua_getupvalue(L: ?*lua_State, funcindex: c_int, n: c_int) ?[*:0]const u8;
extern fn lua_setupvalue(L: ?*lua_State, funcindex: c_int, n: c_int) ?[*:0]const u8;
extern fn lua_upvalueid(L: ?*lua_State, fidx: c_int, n: c_int) ?*anyopaque;
extern fn lua_upvaluejoin(L: ?*lua_State, fidx1: c_int, n1: c_int, fidx2: c_int, n2: c_int) void;
extern fn lua_sethook(L: ?*lua_State, func: lua_Hook, mask: c_int, count: c_int) void;
extern fn lua_gethook(L: ?*lua_State) lua_Hook;
extern fn lua_gethookmask(L: ?*lua_State) c_int;
extern fn lua_gethookcount(L: ?*lua_State) c_int;
extern fn lua_setcstacklimit(L: ?*lua_State, limit: c_uint) c_int;

// Auxiliary library
extern fn luaL_checkversion_(L: ?*lua_State, ver: lua_Number, sz: usize) void;
extern fn luaL_argerror(L: ?*lua_State, arg: c_int, extramsg: [*:0]const u8) c_int;
extern fn luaL_typeerror(L: ?*lua_State, arg: c_int, tname: [*:0]const u8) c_int;
extern fn luaL_error(L: ?*lua_State, fmt: [*:0]const u8, ...) c_int;
extern fn luaL_checkinteger(L: ?*lua_State, arg: c_int) lua_Integer;
extern fn luaL_optinteger(L: ?*lua_State, arg: c_int, def: lua_Integer) lua_Integer;
extern fn luaL_checklstring(L: ?*lua_State, arg: c_int, l: ?*usize) [*:0]const u8;
extern fn luaL_optlstring(L: ?*lua_State, arg: c_int, def: ?[*:0]const u8, l: ?*usize) ?[*:0]const u8;
extern fn luaL_checktype(L: ?*lua_State, arg: c_int, t: c_int) void;
extern fn luaL_checkany(L: ?*lua_State, arg: c_int) void;
extern fn luaL_tolstring(L: ?*lua_State, idx: c_int, len: ?*usize) ?[*:0]const u8;
extern fn luaL_setfuncs(L: ?*lua_State, l: [*]const luaL_Reg, nup: c_int) void;
extern fn luaL_getsubtable(L: ?*lua_State, idx: c_int, fname: [*:0]const u8) c_int;
extern fn luaL_traceback(L: ?*lua_State, L1: ?*lua_State, msg: ?[*:0]const u8, level: c_int) void;
extern fn luaL_loadbufferx(L: ?*lua_State, buff: [*]const u8, sz: usize, name: [*:0]const u8, mode: ?[*:0]const u8) c_int;
extern fn luaL_callmeta(L: ?*lua_State, obj: c_int, e: [*:0]const u8) c_int;

// C standard library
extern fn strchr(s: [*:0]const u8, c_2: c_int) ?[*:0]const u8;
extern fn strcmp(s1: [*:0]const u8, s2: [*:0]const u8) c_int;
extern fn strlen(s: [*:0]const u8) usize;
extern var stderr: *FILE;
extern var stdin: *FILE;
extern fn fprintf(stream: *FILE, fmt: [*:0]const u8, ...) c_int;
extern fn fflush(stream: *FILE) c_int;
extern fn fgets(s: [*]u8, size: c_int, stream: *FILE) ?[*]u8;

// LUA_REGISTRYINDEX
const LUA_REGISTRYINDEX = -1000000 - 1000;

const HOOKKEY: [*:0]const u8 = "_HOOKKEY";

pub export fn luaopen_debug(L: ?*lua_State) callconv(.c) c_int {
    luaL_checkversion_(L, @floatFromInt(@as(c_int, 504)), @sizeOf(lua_Integer) *% 16 +% @sizeOf(lua_Number));
    lua_createtable(L, 0, @as(c_int, @intCast(dblib.len - 1)));
    luaL_setfuncs(L, &dblib, 0);
    return 1;
}

comptime {
    // asm (".section .yoink\n\tb\t\"lua_notice\"\n\t.previous");
}

fn checkstack(L: ?*lua_State, L1: ?*lua_State, n: c_int) void {
    if (L != L1 and lua_checkstack(L1, n) == 0) {
        _ = luaL_error(L, "stack overflow");
    }
}

fn db_getregistry(L: ?*lua_State) callconv(.c) c_int {
    lua_pushvalue(L, LUA_REGISTRYINDEX);
    return 1;
}

fn db_getmetatable(L: ?*lua_State) callconv(.c) c_int {
    luaL_checkany(L, 1);
    if (lua_getmetatable(L, 1) == 0) {
        lua_pushnil(L);
    }
    return 1;
}

fn db_setmetatable(L: ?*lua_State) callconv(.c) c_int {
    const t = lua_type(L, 2);
    _ = (t == 0 or t == 5) or (luaL_typeerror(L, 2, "nil or table") != 0); // LUA_TNIL or LUA_TTABLE
    lua_settop(L, 2);
    _ = lua_setmetatable(L, 1);
    return 1;
}

fn db_getuservalue(L: ?*lua_State) callconv(.c) c_int {
    const n: c_int = @intCast(@as(c_int, @truncate(luaL_optinteger(L, 2, 1))));
    if (lua_type(L, 1) != 7) { // LUA_TUSERDATA
        lua_pushnil(L);
    } else if (lua_getiuservalue(L, 1, n) != -1) { // LUA_TNONE
        lua_pushboolean(L, 1);
        return 2;
    }
    return 1;
}

fn db_setuservalue(L: ?*lua_State) callconv(.c) c_int {
    const n: c_int = @intCast(@as(c_int, @truncate(luaL_optinteger(L, 3, 1))));
    luaL_checktype(L, 1, 7); // LUA_TUSERDATA
    luaL_checkany(L, 2);
    lua_settop(L, 2);
    if (lua_setiuservalue(L, 1, n) == 0) {
        lua_pushnil(L);
    }
    return 1;
}

fn getthread(L: ?*lua_State, arg: *c_int) ?*lua_State {
    if (lua_type(L, 1) == 8) { // LUA_TTHREAD
        arg.* = 1;
        return lua_tothread(L, 1);
    } else {
        arg.* = 0;
        return L;
    }
}

fn settabss(L: ?*lua_State, k: [*:0]const u8, v: ?[*:0]const u8) void {
    _ = lua_pushstring(L, v);
    lua_setfield(L, -2, k);
}

fn settabsi(L: ?*lua_State, k: [*:0]const u8, v: c_int) void {
    lua_pushinteger(L, @intCast(v));
    lua_setfield(L, -2, k);
}

fn settabsb(L: ?*lua_State, k: [*:0]const u8, v: c_int) void {
    lua_pushboolean(L, v);
    lua_setfield(L, -2, k);
}

fn treatstackoption(L: ?*lua_State, L1: ?*lua_State, fname: [*:0]const u8) void {
    if (L == L1) {
        lua_rotate(L, -2, 1);
    } else {
        lua_xmove(L1, L, 1);
    }
    lua_setfield(L, -2, fname);
}

fn db_getinfo(L: ?*lua_State) callconv(.c) c_int {
    var ar: lua_Debug = undefined;
    var arg: c_int = undefined;
    const L1: ?*lua_State = getthread(L, &arg);
    var options: ?[*:0]const u8 = luaL_optlstring(L, arg + 2, "flnSrtu", null);
    checkstack(L, L1, 3);
    if (options) |opts| {
        _ = (opts[0] != '>') or (luaL_argerror(L, arg + 2, "invalid option '>'") != 0);
    }
    if (lua_type(L, arg + 1) == 6) { // LUA_TFUNCTION
        {
            var fmtbuf: [512]u8 = undefined;
            const result = std.fmt.bufPrintZ(&fmtbuf, ">{s}", .{
                if (options) |o| std.mem.span(o) else "",
            }) catch ">?";
            options = lua_pushstring(L, result);
        }
        lua_pushvalue(L, arg + 1);
        lua_xmove(L, L1, 1);
    } else {
        if (lua_getstack(L1, @intCast(@as(c_int, @truncate(luaL_checkinteger(L, arg + 1)))), &ar) == 0) {
            lua_pushnil(L);
            return 1;
        }
    }
    if (lua_getinfo(L1, options.?, &ar) == 0) return luaL_argerror(L, arg + 2, "invalid option");
    lua_createtable(L, 0, 0);
    if (strchr(options.?, 'S') != null) {
        if (ar.source) |src| {
            _ = lua_pushlstring(L, src, ar.srclen);
        } else {
            lua_pushnil(L);
        }
        lua_setfield(L, -2, "source");
        settabss(L, "short_src", @ptrCast(&ar.short_src));
        settabsi(L, "linedefined", ar.linedefined);
        settabsi(L, "lastlinedefined", ar.lastlinedefined);
        settabss(L, "what", ar.what);
    }
    if (strchr(options.?, 'l') != null) {
        settabsi(L, "currentline", ar.currentline);
    }
    if (strchr(options.?, 'u') != null) {
        settabsi(L, "nups", @intCast(ar.nups));
        settabsi(L, "nparams", @intCast(ar.nparams));
        settabsb(L, "isvararg", @intCast(ar.isvararg));
    }
    if (strchr(options.?, 'n') != null) {
        settabss(L, "name", ar.name);
        settabss(L, "namewhat", ar.namewhat);
    }
    if (strchr(options.?, 'r') != null) {
        settabsi(L, "ftransfer", @intCast(ar.ftransfer));
        settabsi(L, "ntransfer", @intCast(ar.ntransfer));
    }
    if (strchr(options.?, 't') != null) {
        settabsb(L, "istailcall", @intCast(ar.istailcall));
    }
    if (strchr(options.?, 'L') != null) {
        treatstackoption(L, L1, "activelines");
    }
    if (strchr(options.?, 'f') != null) {
        treatstackoption(L, L1, "func");
    }
    return 1;
}
